# compiler-project

./: .gitignore  README.md  create_fixtures.py  create_parser_fixtures.py  generate_invalid_expected.py  pyproject.toml
docs/: grammar.md  language_spec.md
examples/: factorial.md  hello.src
src/: __init__.py  main.py
src/lexer/: __init__.py  formatter.py  scanner.py  token.py
src/parser/: __init__.py  ast.py  dot_printer.py  grammar.txt  json_printer.py  parser.py  pretty_printer.py
src/utils/: __init__.py  files.py
tests/lexer/invalid/: test_bad_string_escape.expected  test_bad_string_escape.src  test_identifier_too_long.expected  test_identifier_too_long.src  test_integer_overflow.expected  test_invalid_char.expected  test_invalid_char.src  test_lone_ampersand.expected  test_lone_pipe.expected  test_malformed_number.expected  test_malformed_number.src  test_multiple_invalid.expected  test_multiple_invalid.src  test_unterminated_comment.expected  test_unterminated_comment.src  test_unterminated_string.expected  test_unterminated_string.src
tests/lexer/valid/: test_assignment_operators.expected  test_assignment_operators.src  test_booleans.expected  test_comments.expected  test_comments.src  test_delimiters.expected  test_delimiters.src  test_empty.expected  test_floats.expected  test_floats.src  test_for_loop.expected  test_for_loop.src  test_identifiers.expected  test_identifiers.src  test_if_else.expected  test_if_else.src  test_keywords.expected  test_logical.expected  test_mixed_tokens.expected  test_mixed_tokens.src  (+15 more)
tests/test_runner/: run_tests.py
(+39 files in other folders)
