[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-compiler"
version = "0.1.0"
description = "MiniCompiler Sprint 1: lexical analyzer for a simplified C-like language"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Team Placeholder", email = "team@example.com" }
]

[project.scripts]
compiler = "src.main:main"

[tool.setuptools]
packages = ["src", "src.lexer", "src.utils"]